Add lightgun support (JamalZ)
Code related to lightgun support patch.  Currently supports only one mouse, but can be plugged into port 1 or 2.  The code also includes unused incomplete code for raw mouse input, (which is to be added at a future date).

Lightgun support fixed by JamalZ (2022) under GNU public license (same as Kronos/Yabause).
If you like this program, kindly consider donating Sega Saturn and Super Nintendo software and hardware to help me with my projects, so I can make similar modifications and software to benefit the gaming community.
Github: jamalzed		Tw: jamal_zedman		RH: Jamal

--- a/yabause/src/CMakeLists.txt
+++ b/yabause/src/CMakeLists.txt
@@ -125,6 +125,8 @@ set(kronos_HEADERS
   utils/include/japmodem.h
 	tools/junzip/junzip.h
 )
+#	core/video/oldgl/vidoldgl.h
+#	core/video/oldgl/yglold.h
 
 option(YAB_MULTIBUILD "Choose wether to build all ports or only a single one")
 set(YAB_PORT_BUILT FALSE)
@@ -840,7 +842,8 @@ if (YAB_NETWORK AND UNIX)
     set(KRONOS_LIBRARIES ${KRONOS_LIBRARIES} "socket")
 endif()
 
-option(YAB_TESTS "Build test programs for cores" OFF)
-if (YAB_TESTS)
-	add_subdirectory("tools")
-endif()
+# Does not work
+#option(YAB_TESTS "Build test programs for cores" OFF)
+#if (YAB_TESTS)
+#	add_subdirectory("tools")
+#endif()
